--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
       <div class="banner">
         <p class="team-header">Ally Team Current theme source: <strong id="theme-source">System</strong></p>
+        <div id="countdownTimer" class="timer"></div>
         <p class="team-header">Enemy Team</p>
       </div>
       <div class="main-content">
@@ -117,222 +118,6 @@
             </div>
           </div>
           <div class="display-all" id="all">
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
-            <div class="all-champion-selector">
-              <div class="all-champion-box"></div>
-              <div class="all-champion-name">CHAMP</div>
-            </div>
           </div>
           <div class="submit-button">
             <button id="confirm-champ-selection">CONFIRM</button>
