Pick/ban now integrated

--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
       <div class="banner">
         <div class="team-bans">
           <div class="ban-box" id="blue-ban-1">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Aatrox.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Aatrox.png" />
           </div>
           <div class="ban-box" id="blue-ban-2">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Ahri.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Ahri.png" />
           </div>
           <div class="ban-box" id="blue-ban-3">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Akali.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Akali.png" />
           </div>
           <div class="ban-box" id="blue-ban-4">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Akshan.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Akshan.png" />
           </div>
           <div class="ban-box" id="blue-ban-5">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Alistar.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Alistar.png" />
           </div>
         </div>
         <div class="team-bans">
           <div class="ban-box" id="red-ban-1">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Amumu.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Amumu.png" />
           </div>
           <div class="ban-box" id="red-ban-2">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Anivia.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Anivia.png" />
           </div>
           <div class="ban-box" id="red-ban-3">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Annie.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Annie.png" />
           </div>
           <div class="ban-box" id="red-ban-4">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Aphelios.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Aphelios.png" />
           </div>
           <div class="ban-box" id="red-ban-5">
-            <img src="dragontail-13.13.1\13.13.1\img\champion\Ashe.png" />
+            <img src="../dragontail-13.13.1\13.13.1\img\champion\Ashe.png" />
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <div class="pick-box pick-box-left" id="blue-pick-1">
             <div class="champion-portrait">
               <img
-                src="dragontail-13.13.1\13.13.1\img\champion\AurelionSol.png"
+                src="../dragontail-13.13.1\13.13.1\img\champion\AurelionSol.png"
               />
             </div>
             <div class="champion-role">TOP</div>
@@ -89,33 +89,33 @@
             <button id="show-all">ALL CHAMPS</button>
           </div>
           <div class="display-recommendations" id="recommendations">
-            <div class="recommendation">
+            <button class="recommendation" id="rec-1">
               <div class="champion-name">
                 <div class="champion-name-text">RELL</div>
               </div>
               <div class="champion-portrait">
-                <img src="dragontail-13.13.1\13.13.1\img\champion\Rell.png" />
+                <img src="../dragontail-13.13.1\13.13.1\img\champion\Rell.png" />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
-            </div>
-            <div class="recommendation">
+            </button>
+            <button class="recommendation" id="rec-2">
               <div class="champion-name">
                 <div class="champion-name-text">SONA</div>
               </div>
               <div class="champion-portrait">
-                <img src="dragontail-13.13.1\13.13.1\img\champion\Sona.png" />
+                <img src="../dragontail-13.13.1\13.13.1\img\champion\Sona.png" />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
-            </div>
-            <div class="recommendation">
+            </button>
+            <button class="recommendation" id="rec-3">
               <div class="champion-name">
                 <div class="champion-name-text">LUX</div>
               </div>
               <div class="champion-portrait">
-                <img src="dragontail-13.13.1\13.13.1\img\champion\Lux.png" />
+                <img src="../dragontail-13.13.1\13.13.1\img\champion\Lux.png" />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
-            </div>
+            </button>
           </div>
           <div class="display-all" id="all">
           </div>
@@ -127,13 +127,13 @@
           <div class="pick-box pick-box-right" id="red-pick-1">
             <div class="champion-role">TOP</div>
             <div class="champion-portrait">
-              <img src="dragontail-13.13.1\13.13.1\img\champion\Azir.png" />
+              <img src="../dragontail-13.13.1\13.13.1\img\champion\Azir.png" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-2">
             <div class="champion-role">JUNGLE</div>
             <div class="champion-portrait">
-              <img src="dragontail-13.13.1\13.13.1\img\champion\Bard.png" />
+              <img src="../dragontail-13.13.1\13.13.1\img\champion\Bard.png" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-3">
