Picks and Bans show up

--- a/index.html
+++ b/index.html
@@ -11,75 +11,84 @@
       content="default-src 'self'; script-src 'self'"
     />
     <title>Hello from Electron renderer!</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <div class="full-layout">
       <div class="banner">
         <div class="team-bans">
+          <div class="ban-box" id="blue-ban-0">
+            <img src="" />
+          </div>
           <div class="ban-box" id="blue-ban-1">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Aatrox.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="blue-ban-2">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Ahri.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="blue-ban-3">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Akali.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="blue-ban-4">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Akshan.png" />
-          </div>
-          <div class="ban-box" id="blue-ban-5">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Alistar.png" />
+            <img src="" />
           </div>
         </div>
         <div class="team-bans">
+          <div class="ban-box" id="red-ban-0">
+            <img src="" />
+          </div>
           <div class="ban-box" id="red-ban-1">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Amumu.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="red-ban-2">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Anivia.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="red-ban-3">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Annie.png" />
+            <img src="" />
           </div>
           <div class="ban-box" id="red-ban-4">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Aphelios.png" />
-          </div>
-          <div class="ban-box" id="red-ban-5">
-            <img src="../dragontail-13.13.1\13.13.1\img\champion\Ashe.png" />
+            <img src="" />
           </div>
         </div>
       </div>
       <div class="banner">
-        <p class="team-header">Ally Team Current theme source: <strong id="theme-source">System</strong></p>
+        <p class="team-header">
+          Ally Team Current theme source:
+          <strong id="theme-source">System</strong>
+        </p>
         <div id="countdownTimer" class="timer"></div>
         <p class="team-header">Enemy Team</p>
       </div>
       <div class="main-content">
         <div class="team-picks">
-          <div class="pick-box pick-box-left" id="blue-pick-1">
+          <div class="pick-box pick-box-left" id="blue-pick-0">
             <div class="champion-portrait">
-              <img
-                src="../dragontail-13.13.1\13.13.1\img\champion\AurelionSol.png"
-              />
+              <img src="" />
             </div>
             <div class="champion-role">TOP</div>
           </div>
-          <div class="pick-box pick-box-left" id="blue-pick-2">
-            <div class="champion-portrait"></div>
+          <div class="pick-box pick-box-left" id="blue-pick-1">
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
             <div class="champion-role">JUNGLE</div>
           </div>
-          <div class="pick-box pick-box-left" id="blue-pick-3">
-            <div class="champion-portrait"></div>
+          <div class="pick-box pick-box-left" id="blue-pick-2">
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
             <div class="champion-role">MID</div>
           </div>
-          <div class="pick-box pick-box-left" id="blue-pick-4">
-            <div class="champion-portrait"></div>
+          <div class="pick-box pick-box-left" id="blue-pick-3">
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
             <div class="champion-role">BOT</div>
           </div>
-          <div class="pick-box pick-box-left" id="blue-pick-5">
-            <div class="champion-portrait"></div>
+          <div class="pick-box pick-box-left" id="blue-pick-4">
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
             <div class="champion-role">SUPPORT</div>
           </div>
         </div>
@@ -94,7 +103,9 @@
                 <div class="champion-name-text">RELL</div>
               </div>
               <div class="champion-portrait">
-                <img src="../dragontail-13.13.1\13.13.1\img\champion\Rell.png" />
+                <img
+                  src="../dragontail-13.13.1\13.13.1\img\champion\Rell.png"
+                />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
             </button>
@@ -103,7 +114,9 @@
                 <div class="champion-name-text">SONA</div>
               </div>
               <div class="champion-portrait">
-                <img src="../dragontail-13.13.1\13.13.1\img\champion\Sona.png" />
+                <img
+                  src="../dragontail-13.13.1\13.13.1\img\champion\Sona.png"
+                />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
             </button>
@@ -117,36 +130,41 @@
               <div class="recommendation-text">SYNNERGY WITH</div>
             </button>
           </div>
-          <div class="display-all" id="all">
-          </div>
+          <div class="display-all" id="all"></div>
           <div class="submit-button">
             <button id="confirm-champ-selection">CONFIRM</button>
           </div>
         </div>
         <div class="team-picks">
-          <div class="pick-box pick-box-right" id="red-pick-1">
+          <div class="pick-box pick-box-right" id="red-pick-0">
             <div class="champion-role">TOP</div>
             <div class="champion-portrait">
-              <img src="../dragontail-13.13.1\13.13.1\img\champion\Azir.png" />
+              <img src="" />
+            </div>
+          </div>
+          <div class="pick-box pick-box-right" id="red-pick-1">
+            <div class="champion-role">JUNGLE</div>
+            <div class="champion-portrait">
+              <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-2">
-            <div class="champion-role">JUNGLE</div>
+            <div class="champion-role">MID</div>
             <div class="champion-portrait">
-              <img src="../dragontail-13.13.1\13.13.1\img\champion\Bard.png" />
+              <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-3">
-            <div class="champion-role">MID</div>
-            <div class="champion-portrait"></div>
+            <div class="champion-role">BOT</div>
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-4">
-            <div class="champion-role">BOT</div>
-            <div class="champion-portrait"></div>
-          </div>
-          <div class="pick-box pick-box-right" id="red-pick-5">
             <div class="champion-role">SUPPORT</div>
-            <div class="champion-portrait"></div>
+            <div class="champion-portrait">
+              <img src="" />
+            </div>
           </div>
         </div>
       </div>
