replaced static with live role

--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
             <div class="champion-portrait">
               <img src="" />
             </div>
-            <div class="champion-role">TOP</div>
+            <div class="champion-role"></div>
           </div>
           <div class="pick-box pick-box-left" id="blue-pick-1">
             <div class="champion-portrait">
               <img src="" />
             </div>
-            <div class="champion-role">JUNGLE</div>
+            <div class="champion-role"></div>
           </div>
           <div class="pick-box pick-box-left" id="blue-pick-2">
             <div class="champion-portrait">
               <img src="" />
             </div>
-            <div class="champion-role">MID</div>
+            <div class="champion-role"></div>
           </div>
           <div class="pick-box pick-box-left" id="blue-pick-3">
             <div class="champion-portrait">
               <img src="" />
             </div>
-            <div class="champion-role">BOT</div>
+            <div class="champion-role"></div>
           </div>
           <div class="pick-box pick-box-left" id="blue-pick-4">
             <div class="champion-portrait">
               <img src="" />
             </div>
-            <div class="champion-role">SUPPORT</div>
+            <div class="champion-role"></div>
           </div>
         </div>
         <div class="display-section">
@@ -137,31 +137,31 @@
         </div>
         <div class="team-picks">
           <div class="pick-box pick-box-right" id="red-pick-0">
-            <div class="champion-role">TOP</div>
+            <div class="champion-role"></div>
             <div class="champion-portrait">
               <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-1">
-            <div class="champion-role">JUNGLE</div>
+            <div class="champion-role"></div>
             <div class="champion-portrait">
               <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-2">
-            <div class="champion-role">MID</div>
+            <div class="champion-role"></div>
             <div class="champion-portrait">
               <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-3">
-            <div class="champion-role">BOT</div>
+            <div class="champion-role"></div>
             <div class="champion-portrait">
               <img src="" />
             </div>
           </div>
           <div class="pick-box pick-box-right" id="red-pick-4">
-            <div class="champion-role">SUPPORT</div>
+            <div class="champion-role"></div>
             <div class="champion-portrait">
               <img src="" />
             </div>
