--- a/index.html
+++ b/index.html
@@ -100,32 +100,32 @@
           <div class="display-recommendations" id="recommendations">
             <button class="recommendation" id="rec-1">
               <div class="champion-name">
-                <div class="champion-name-text">RELL</div>
+                <div class="champion-name-text"></div>
               </div>
               <div class="champion-portrait">
                 <img
-                  src="../dragontail-13.13.1\13.13.1\img\champion\Rell.png"
+                  src=""
+                />
+              </div>
+              <div class="recommendation-text">SYNNERGY WITH</div>
+            </button>
+            <button class="recommendation" id="rec-0">
+              <div class="champion-name">
+                <div class="champion-name-text"></div>
+              </div>
+              <div class="champion-portrait">
+                <img
+                  src=""
                 />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
             </button>
             <button class="recommendation" id="rec-2">
               <div class="champion-name">
-                <div class="champion-name-text">SONA</div>
+                <div class="champion-name-text"></div>
               </div>
               <div class="champion-portrait">
-                <img
-                  src="../dragontail-13.13.1\13.13.1\img\champion\Sona.png"
-                />
-              </div>
-              <div class="recommendation-text">SYNNERGY WITH</div>
-            </button>
-            <button class="recommendation" id="rec-3">
-              <div class="champion-name">
-                <div class="champion-name-text">LUX</div>
-              </div>
-              <div class="champion-portrait">
-                <img src="../dragontail-13.13.1\13.13.1\img\champion\Lux.png" />
+                <img src="" />
               </div>
               <div class="recommendation-text">SYNNERGY WITH</div>
             </button>
